Compiler/tests/bad/Structs/02_structs.rs
struct Boolean{
    v: bool
}

fn main(){
    let test : Boolean = Boolean{v:55};

    println!(test.v);

    return;
}
